fixed curl and added deploy hook

--- a/.github/workflows/backend.yml
+++ b/.github/workflows/backend.yml
@@ -30,4 +30,4 @@ jobs:
 
       - name: Trigger Render Deploy
 
-        run: curl ${{ secrets.RENDER_DEPLOY_HOOK }}
+        run: curl "${{ secrets.RENDER_DEPLOY_HOOK }}"
